class_name UpgradeMenu
extends Control







func _ready() -> void:
	
	return

func set_buy_upgrade_cost_statistics(cost : Dictionary[int, int]) -> void:
	
	return

func set_buy_upgrade_cost_passive_income(cost : Dictionary[int, int]) -> void:
	
	return

func set_buy_upgrade_cost_draws(cost : Dictionary[int, int]) -> void:
	
	return

func _on_buy_upgrade_button_statistics_pressed() -> void:
	return

func _on_buy_upgrade_button_passive_income_pressed() -> void:
	return

func _on_buy_upgrade_button_draws_pressed() -> void:
	return

func _on_button_paytable_view_pressed() -> void:
	return

func _on_button_deck_view_pressed() -> void:
	return
